Updating VerifyLinks Method and Solving Problem of SocketTimeOutException